[package]
name = "vector-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.190", features = ["derive"] }
rust-bert = "0.21.0"
tch = "0.13.0"
torch-sys = "0.13.0"
anyhow = "1.0.75"