[package]
name = "vectorize"
version = "0.5.0"
edition = "2021"
publish = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
anyhow = "1.0.72"
chrono = {version = "0.4.26", features = ["serde"] }
log = "0.4.19"
pgmq = "0.24.0"
pgrx = "0.11.0"
postgres-types = "0.2.5"
regex = "1.9.2"
reqwest = {version = "0.11.18", features = ["json"] }
serde = "1.0.173"
serde_json = "1.0.103"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
thiserror = "1.0.44"
tokio = {version = "1.29.1", features = ["rt-multi-thread"] }
url = "2.4.0"

[dev-dependencies]
pgrx-tests = "0.11.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
