[tool.poetry]
name = "vector-serve"
version = "0.1.0"
description = ""
authors = ["Tembo <engineering@tembo.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentence-transformers = "^2.2.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
