[package]
name = "vectorize-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]

[[bin]]
name = "vectorize-worker"
path = "src/bin/worker.rs"


[dependencies]
anyhow = "1.0.81"
chrono = {version = "0.4.26", features = ["serde"] }
env_logger = "0.11.3"
fluvio-jolt = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
pgmq = "0.26.1"
regex = "1.9.2"
reqwest = {version = "0.11.18", features = ["json"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "=0.7.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json"
] }
thiserror = "1.0.44"
tiktoken-rs = "0.5.7"
tokio = {version = "1.29.1", features = ["rt-multi-thread"] }
