[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tembo <engineering@tembo.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sentence-transformers = "^2.2.2"
torch = "^2.1.2"
einops = "^0.7.0"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
black = "*"
pytest = "^8.0.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
